JDK 17 Migration